--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="top"
     tools:context=".MainActivity">
+
+    <fragment
+        android:id="@+id/gameField"
+        android:name="ivs.ilves.simple15puzzle.GameField"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/reloadBtn"
@@ -12,14 +23,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginBottom="32dp"
         android:text="@string/reload"
         android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/countShow"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/countShow"
@@ -35,197 +46,197 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <TableLayout
-        android:id="@+id/tableLayout"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:gravity="center_horizontal">
+    <!--<TableLayout-->
+    <!--android:id="@+id/tableLayout"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="0dp"-->
+    <!--android:gravity="center_horizontal">-->
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical|center_horizontal">
+    <!--<TableRow-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:gravity="center_vertical|center_horizontal">-->
 
-            <Button
-                android:id="@+id/c1x1"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="95dp"
-                android:layout_height="95dp"
-                android:layout_margin="0dp"
-                android:text="@string/c1x1"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+    <!--<Button-->
+    <!--android:id="@+id/c1x1"-->
+    <!--style="@style/Widget.AppCompat.Button.Colored"-->
+    <!--android:layout_width="95dp"-->
+    <!--android:layout_height="95dp"-->
+    <!--android:layout_margin="0dp"-->
+    <!--android:text="@string/c1x1"-->
+    <!--android:textSize="24sp"-->
+    <!--android:textStyle="bold" />-->
 
-            <Button
-                android:id="@+id/c1x2"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="95dp"
-                android:layout_height="95dp"
-                android:layout_margin="0dp"
-                android:text="@string/c1x2"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+    <!--<Button-->
+    <!--android:id="@+id/c1x2"-->
+    <!--style="@style/Widget.AppCompat.Button.Colored"-->
+    <!--android:layout_width="95dp"-->
+    <!--android:layout_height="95dp"-->
+    <!--android:layout_margin="0dp"-->
+    <!--android:text="@string/c1x2"-->
+    <!--android:textSize="24sp"-->
+    <!--android:textStyle="bold" />-->
 
-            <Button
-                android:id="@+id/c1x3"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="95dp"
-                android:layout_height="95dp"
-                android:layout_margin="0dp"
-                android:text="@string/c1x3"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+    <!--<Button-->
+    <!--android:id="@+id/c1x3"-->
+    <!--style="@style/Widget.AppCompat.Button.Colored"-->
+    <!--android:layout_width="95dp"-->
+    <!--android:layout_height="95dp"-->
+    <!--android:layout_margin="0dp"-->
+    <!--android:text="@string/c1x3"-->
+    <!--android:textSize="24sp"-->
+    <!--android:textStyle="bold" />-->
 
-            <Button
-                android:id="@+id/c1x4"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="95dp"
-                android:layout_height="95dp"
-                android:layout_margin="0dp"
-                android:text="@string/c1x4"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-        </TableRow>
+    <!--<Button-->
+    <!--android:id="@+id/c1x4"-->
+    <!--style="@style/Widget.AppCompat.Button.Colored"-->
+    <!--android:layout_width="95dp"-->
+    <!--android:layout_height="95dp"-->
+    <!--android:layout_margin="0dp"-->
+    <!--android:text="@string/c1x4"-->
+    <!--android:textSize="24sp"-->
+    <!--android:textStyle="bold" />-->
+    <!--</TableRow>-->
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical|center_horizontal">
+    <!--<TableRow-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:gravity="center_vertical|center_horizontal">-->
 
-            <Button
-                android:id="@+id/c2x1"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="95dp"
-                android:layout_height="95dp"
-                android:layout_margin="0dp"
-                android:text="@string/c2x1"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+    <!--<Button-->
+    <!--android:id="@+id/c2x1"-->
+    <!--style="@style/Widget.AppCompat.Button.Colored"-->
+    <!--android:layout_width="95dp"-->
+    <!--android:layout_height="95dp"-->
+    <!--android:layout_margin="0dp"-->
+    <!--android:text="@string/c2x1"-->
+    <!--android:textSize="24sp"-->
+    <!--android:textStyle="bold" />-->
 
-            <Button
-                android:id="@+id/c2x2"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="95dp"
-                android:layout_height="95dp"
-                android:layout_margin="0dp"
-                android:text="@string/c2x2"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+    <!--<Button-->
+    <!--android:id="@+id/c2x2"-->
+    <!--style="@style/Widget.AppCompat.Button.Colored"-->
+    <!--android:layout_width="95dp"-->
+    <!--android:layout_height="95dp"-->
+    <!--android:layout_margin="0dp"-->
+    <!--android:text="@string/c2x2"-->
+    <!--android:textSize="24sp"-->
+    <!--android:textStyle="bold" />-->
 
-            <Button
-                android:id="@+id/c2x3"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="95dp"
-                android:layout_height="95dp"
-                android:layout_margin="0dp"
-                android:text="@string/c2x3"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+    <!--<Button-->
+    <!--android:id="@+id/c2x3"-->
+    <!--style="@style/Widget.AppCompat.Button.Colored"-->
+    <!--android:layout_width="95dp"-->
+    <!--android:layout_height="95dp"-->
+    <!--android:layout_margin="0dp"-->
+    <!--android:text="@string/c2x3"-->
+    <!--android:textSize="24sp"-->
+    <!--android:textStyle="bold" />-->
 
-            <Button
-                android:id="@+id/c2x4"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="95dp"
-                android:layout_height="95dp"
-                android:layout_margin="0dp"
-                android:text="@string/c2x4"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+    <!--<Button-->
+    <!--android:id="@+id/c2x4"-->
+    <!--style="@style/Widget.AppCompat.Button.Colored"-->
+    <!--android:layout_width="95dp"-->
+    <!--android:layout_height="95dp"-->
+    <!--android:layout_margin="0dp"-->
+    <!--android:text="@string/c2x4"-->
+    <!--android:textSize="24sp"-->
+    <!--android:textStyle="bold" />-->
 
-        </TableRow>
+    <!--</TableRow>-->
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical|center_horizontal">
+    <!--<TableRow-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:gravity="center_vertical|center_horizontal">-->
 
-            <Button
-                android:id="@+id/c3x1"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="95dp"
-                android:layout_height="95dp"
-                android:layout_margin="0dp"
-                android:text="@string/c3x1"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+    <!--<Button-->
+    <!--android:id="@+id/c3x1"-->
+    <!--style="@style/Widget.AppCompat.Button.Colored"-->
+    <!--android:layout_width="95dp"-->
+    <!--android:layout_height="95dp"-->
+    <!--android:layout_margin="0dp"-->
+    <!--android:text="@string/c3x1"-->
+    <!--android:textSize="24sp"-->
+    <!--android:textStyle="bold" />-->
 
-            <Button
-                android:id="@+id/c3x2"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="95dp"
-                android:layout_height="95dp"
-                android:layout_margin="0dp"
-                android:text="@string/c3x2"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+    <!--<Button-->
+    <!--android:id="@+id/c3x2"-->
+    <!--style="@style/Widget.AppCompat.Button.Colored"-->
+    <!--android:layout_width="95dp"-->
+    <!--android:layout_height="95dp"-->
+    <!--android:layout_margin="0dp"-->
+    <!--android:text="@string/c3x2"-->
+    <!--android:textSize="24sp"-->
+    <!--android:textStyle="bold" />-->
 
-            <Button
-                android:id="@+id/c3x3"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="95dp"
-                android:layout_height="95dp"
-                android:layout_margin="0dp"
-                android:text="@string/c3x3"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+    <!--<Button-->
+    <!--android:id="@+id/c3x3"-->
+    <!--style="@style/Widget.AppCompat.Button.Colored"-->
+    <!--android:layout_width="95dp"-->
+    <!--android:layout_height="95dp"-->
+    <!--android:layout_margin="0dp"-->
+    <!--android:text="@string/c3x3"-->
+    <!--android:textSize="24sp"-->
+    <!--android:textStyle="bold" />-->
 
-            <Button
-                android:id="@+id/c3x4"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="95dp"
-                android:layout_height="95dp"
-                android:layout_margin="0dp"
-                android:text="@string/c3x4"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-        </TableRow>
+    <!--<Button-->
+    <!--android:id="@+id/c3x4"-->
+    <!--style="@style/Widget.AppCompat.Button.Colored"-->
+    <!--android:layout_width="95dp"-->
+    <!--android:layout_height="95dp"-->
+    <!--android:layout_margin="0dp"-->
+    <!--android:text="@string/c3x4"-->
+    <!--android:textSize="24sp"-->
+    <!--android:textStyle="bold" />-->
+    <!--</TableRow>-->
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center">
+    <!--<TableRow-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:gravity="center">-->
 
-            <Button
-                android:id="@+id/c4x1"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="95dp"
-                android:layout_height="95dp"
-                android:layout_margin="0dp"
-                android:text="@string/c4x1"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+    <!--<Button-->
+    <!--android:id="@+id/c4x1"-->
+    <!--style="@style/Widget.AppCompat.Button.Colored"-->
+    <!--android:layout_width="95dp"-->
+    <!--android:layout_height="95dp"-->
+    <!--android:layout_margin="0dp"-->
+    <!--android:text="@string/c4x1"-->
+    <!--android:textSize="24sp"-->
+    <!--android:textStyle="bold" />-->
 
-            <Button
-                android:id="@+id/c4x2"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="95dp"
-                android:layout_height="95dp"
-                android:layout_margin="0dp"
-                android:text="@string/c4x2"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+    <!--<Button-->
+    <!--android:id="@+id/c4x2"-->
+    <!--style="@style/Widget.AppCompat.Button.Colored"-->
+    <!--android:layout_width="95dp"-->
+    <!--android:layout_height="95dp"-->
+    <!--android:layout_margin="0dp"-->
+    <!--android:text="@string/c4x2"-->
+    <!--android:textSize="24sp"-->
+    <!--android:textStyle="bold" />-->
 
-            <Button
-                android:id="@+id/c4x3"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="95dp"
-                android:layout_height="95dp"
-                android:layout_margin="0dp"
-                android:text="@string/c4x3"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+    <!--<Button-->
+    <!--android:id="@+id/c4x3"-->
+    <!--style="@style/Widget.AppCompat.Button.Colored"-->
+    <!--android:layout_width="95dp"-->
+    <!--android:layout_height="95dp"-->
+    <!--android:layout_margin="0dp"-->
+    <!--android:text="@string/c4x3"-->
+    <!--android:textSize="24sp"-->
+    <!--android:textStyle="bold" />-->
 
-            <Button
-                android:id="@+id/c4x4"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="95dp"
-                android:layout_height="95dp"
-                android:layout_margin="0dp"
-                android:text="@string/c4x4"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-        </TableRow>
-    </TableLayout>
+    <!--<Button-->
+    <!--android:id="@+id/c4x4"-->
+    <!--style="@style/Widget.AppCompat.Button.Colored"-->
+    <!--android:layout_width="95dp"-->
+    <!--android:layout_height="95dp"-->
+    <!--android:layout_margin="0dp"-->
+    <!--android:text="@string/c4x4"-->
+    <!--android:textSize="24sp"-->
+    <!--android:textStyle="bold" />-->
+    <!--</TableRow>-->
+    <!--</TableLayout>-->
 
 
 </android.support.constraint.ConstraintLayout>
