--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
 
     <fragment
         android:id="@+id/gameField"
-        android:name="ivs.ilves.simple15puzzle.GameField"
+        android:name="ivs.ilves.simple15puzzle.Fragments.GameField"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
