--- a/app/src/main/res/layout/fragment_game_field.xml
+++ b/app/src/main/res/layout/fragment_game_field.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:layout_gravity="center_vertical|center_horizontal"
     android:orientation="vertical"
-    tools:context=".Fragments.GameField">
+    tools:context=".fragments.GameField">
 
     <TableRow
         android:layout_width="match_parent"
